add umami amalytics script tag

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -129,6 +129,8 @@ const structuredData = {
       )
     }
 
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="3af6bedf-dab2-47c5-b8e6-ad65cbbbb55d"></script>
+
     <ViewTransitions />
 
     <script is:inline src="/toggle-theme.js"></script>
